tests/baselines/reference/parserParameterList3.errors.txt
==== tests/cases/compiler/parserParameterList3.ts (1 errors) ====
    class C {
      F(A?, B) { }
            ~
!!! parserParameterList3.ts(2,9): error TS1016: A required parameter cannot follow an optional parameter.
    }